CIMI: CIMI (white box) Tests - fixes for start/stop/delete system (+machines)
Adds rake task for pf2 (rake test:cimiplan_pf2) and skips if no systems

--- a/tests/Rakefile
+++ b/tests/Rakefile
@@ -42,4 +42,8 @@ namespace :test do
     t.test_files = FileList["cimi/part*_test.rb", "cimi/cep_test.rb"]
   end
 
+  Rake::TestTask.new(:cimiplan_pf2) do |t|
+    t.test_files =FileList["cimi/system1_test.rb", "cimi/rmd*_test.rb", "cimi/machex*_test.rb"]
+  end
+
 end
