Client: Lock the 'minitest' gem version to '<5.0' because of bug in turn.

--- a/client/Gemfile
+++ b/client/Gemfile
@@ -5,7 +5,7 @@ gem 'nokogiri'
 
 group :development do
   gem 'rake'
-  gem 'minitest'
+  gem 'minitest', "<5.0"
   gem 'vcr'
   gem 'pry'
   gem 'turn'
