Fix failing travis builds - also DTACLOUD-562
https://travis-ci.org/deltacloud/deltacloud-core/builds/7731674
https://travis-ci.org/deltacloud/deltacloud-core/jobs/7763133
https://issues.apache.org/jira/browse/DTACLOUD-562

--- a/server/lib/deltacloud/drivers/mock/data/instances/inst2.yml
+++ b/server/lib/deltacloud/drivers/mock/data/instances/inst2.yml
@@ -2,7 +2,7 @@
 :instance_profile: !ruby/object:Deltacloud::InstanceProfile
   id: m1-large
 :realm_id: us
-:owner_id: anotheruser
+:owner_id: mockuser
 :public_addresses:
 - !ruby/object:Deltacloud::InstanceAddress
   address: img1.inst2.public.com
