Tests: added assertion to mock image test for 'CreateImageNotSupported'

--- a/server/lib/deltacloud/drivers/mock/data/instances/inst3.yml
+++ b/server/lib/deltacloud/drivers/mock/data/instances/inst3.yml
@@ -17,7 +17,7 @@
 :instance_profile: !ruby/object:Deltacloud::InstanceProfile
   id: m1-small
 :realm_id: eu
-:create_image: true
+:create_image: false
 :actions:
 - :reboot
 - :stop
